backup/masterpackage-retrieve/unpackaged/unpackaged/objects/Conversion__c.object
<CustomObject>
    <description>This object is used to store all the information related to conversion cases [Debit Order Switch]</description>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Conversion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_ID__c</fullName>
        <label>Branch ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Closure_Reason__c</fullName>
        <label>Case Closure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Branch indicate - Ignore request</fullName>
                </value>
                <value>
                    <fullName>Client Cancelled Request</fullName>
                </value>
                <value>
                    <fullName>Client Did not agree to switch</fullName>
                </value>
                <value>
                    <fullName>Client will submit</fullName>
                </value>
                <value>
                    <fullName>Invalid - Agreement not setup</fullName>
                </value>
                <value>
                    <fullName>Invalid - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Invalid - No active debit orders</fullName>
                </value>
                <value>
                    <fullName>Invalid - Request for Savings Plan</fullName>
                </value>
                <value>
                    <fullName>Invalid Bank Statement Request</fullName>
                </value>
                <value>
                    <fullName>Invalid Payslip Request – Invalid Reference number/No Amount</fullName>
                </value>
                <value>
                    <fullName>Invalid Payslip Request – No Payslip attached</fullName>
                </value>
                <value>
                    <fullName>Invalid Request - Bank Statement Older than 3 months</fullName>
                </value>
                <value>
                    <fullName>Invalid SMS Request – Incomplete or Invalid Reference/no amount</fullName>
                </value>
                <value>
                    <fullName>Missing Bank Statement/No Comments</fullName>
                </value>
                <value>
                    <fullName>Refund Processed</fullName>
                </value>
                <value>
                    <fullName>No attachment/invalid attachment</fullName>
                </value>
                <value>
                    <fullName>Query not related to switch</fullName>
                </value>
                <value>
                    <fullName>Auto Close</fullName>
                </value>
                <value>
                    <fullName>Auto Close - No Client feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Escalated_to_Mgr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Escalated to Mgr?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Escalated_to_TL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Escalated to TL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>The master case created for conversion request [Debit Order Switch</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Conversion</relationshipLabel>
        <relationshipName>Conversion</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DEPRECATED_Preferred_Contact_Time__c</fullName>
        <label>DEPRECATED Preferred Contact Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Scheduled__c</fullName>
        <label>Days Scheduled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Dated_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Future Dated Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank statement and Bureau - WS Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>Bank Statement and Payslip – WS Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>Bureau Details -WS Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>CAPFUNERAL – WS Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>DL Lead - WS Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>Mercantile - Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>Mercantile - Website Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>SMS &amp; Bureau - WS Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>SMS - WS Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>Website - WS Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>WhatsApp - Debit Order Switch Request</fullName>
                </value>
                <value>
                    <fullName>APP Debit Order Switch Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to define if the case was created manually</description>
        <label>Manual Case?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Account_Number__c</fullName>
        <label>Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Bank_Name__c</fullName>
        <label>Bank Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20TWENTY</fullName>
                </value>
                <value>
                    <fullName>ABN AMRO BANK</fullName>
                </value>
                <value>
                    <fullName>ABSA BANK</fullName>
                </value>
                <value>
                    <fullName>ACCESS BANK (SOUTH AFRICA) LTD</fullName>
                </value>
                <value>
                    <fullName>AFRICAN BANK</fullName>
                </value>
                <value>
                    <fullName>ALBARAKA BANK</fullName>
                </value>
                <value>
                    <fullName>BANK WINDHOEK</fullName>
                </value>
                <value>
                    <fullName>BANK ZERO MUTUAL BANK</fullName>
                </value>
                <value>
                    <fullName>BIDVEST BANK</fullName>
                </value>
                <value>
                    <fullName>BNP PARIBAS SA SOUTH AFRICA</fullName>
                </value>
                <value>
                    <fullName>CAPITEC BANK</fullName>
                </value>
                <value>
                    <fullName>CITI BANK</fullName>
                </value>
                <value>
                    <fullName>DISCOVERY BANK</fullName>
                </value>
                <value>
                    <fullName>FBC FIDELITY BANK</fullName>
                </value>
                <value>
                    <fullName>FINBOND MUTUAL BANK</fullName>
                </value>
                <value>
                    <fullName>FIRST NATIONAL BANK</fullName>
                </value>
                <value>
                    <fullName>FIRST NATIONAL BANK LESOTHO</fullName>
                </value>
                <value>
                    <fullName>FIRST NATIONAL BANK NAMIBIA</fullName>
                </value>
                <value>
                    <fullName>FIRST NATIONAL BANK SWAZILAND</fullName>
                </value>
                <value>
                    <fullName>GRINDROD BANK</fullName>
                </value>
                <value>
                    <fullName>HABIB OVERSEAS BANK</fullName>
                </value>
                <value>
                    <fullName>HBZ BANK</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
                <value>
                    <fullName>INVESTEC BANK</fullName>
                </value>
                <value>
                    <fullName>ITHALA ABSA</fullName>
                </value>
                <value>
                    <fullName>JP MORGAN CHASE BANK</fullName>
                </value>
                <value>
                    <fullName>MEEG BANK</fullName>
                </value>
                <value>
                    <fullName>MERCANTILE BANK</fullName>
                </value>
                <value>
                    <fullName>MTN BANKING</fullName>
                </value>
                <value>
                    <fullName>NEDBANK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Branch_Code__c</fullName>
        <label>Branch Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>170305</fullName>
                </value>
                <value>
                    <fullName>198765</fullName>
                </value>
                <value>
                    <fullName>250655</fullName>
                </value>
                <value>
                    <fullName>255050</fullName>
                </value>
                <value>
                    <fullName>280061</fullName>
                </value>
                <value>
                    <fullName>280164</fullName>
                </value>
                <value>
                    <fullName>282672</fullName>
                </value>
                <value>
                    <fullName>350005</fullName>
                </value>
                <value>
                    <fullName>400001</fullName>
                </value>
                <value>
                    <fullName>410105</fullName>
                </value>
                <value>
                    <fullName>430000</fullName>
                </value>
                <value>
                    <fullName>431010</fullName>
                </value>
                <value>
                    <fullName>432000</fullName>
                </value>
                <value>
                    <fullName>450105</fullName>
                </value>
                <value>
                    <fullName>460005</fullName>
                </value>
                <value>
                    <fullName>462005</fullName>
                </value>
                <value>
                    <fullName>470010</fullName>
                </value>
                <value>
                    <fullName>490991</fullName>
                </value>
                <value>
                    <fullName>51001</fullName>
                </value>
                <value>
                    <fullName>580105</fullName>
                </value>
                <value>
                    <fullName>584000</fullName>
                </value>
                <value>
                    <fullName>585001</fullName>
                </value>
                <value>
                    <fullName>587000</fullName>
                </value>
                <value>
                    <fullName>588000</fullName>
                </value>
                <value>
                    <fullName>589000</fullName>
                </value>
                <value>
                    <fullName>632005</fullName>
                </value>
                <value>
                    <fullName>634721</fullName>
                </value>
                <value>
                    <fullName>678910</fullName>
                </value>
                <value>
                    <fullName>679000</fullName>
                </value>
                <value>
                    <fullName>683000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <label>Preferred Contact Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Sapedi</fullName>
                </value>
                <value>
                    <fullName>Setswana</fullName>
                </value>
                <value>
                    <fullName>Sesotho</fullName>
                </value>
                <value>
                    <fullName>siSwati</fullName>
                </value>
                <value>
                    <fullName>Tshivenda</fullName>
                </value>
                <value>
                    <fullName>Xitsonga</fullName>
                </value>
                <value>
                    <fullName>isiNdebele</fullName>
                </value>
                <value>
                    <fullName>isiXhosa</fullName>
                </value>
                <value>
                    <fullName>isiZulu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Reason__c</fullName>
        <label>Referral Reason</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments_Manager__c</fullName>
        <label>Resolution Comments Manager</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments_Team_Leader__c</fullName>
        <label>Resolution Comments Team Leader</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transfer_Reason_to_Manager__c</fullName>
        <label>Transfer Reason to Manager</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transfer_Reason_to_Team_Leader__c</fullName>
        <label>Transfer Reason to Team Leader</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3_Days_Check_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>COCONV-1738 - Send client comms after 3 days &amp; close case after 7 days</description>
        <label>3 Days Check Done?</label>
        <type>Checkbox</type>
    </fields>
    <label>Conversion</label>
    <nameField>
        <label>Conversion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>